--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -10,6 +10,9 @@
   height: 30%;
   border-radius: 10px;
 }
+.person-details .list-group{
+  margin-bottom: 20px;
+}
 
 .person-details .list-group-item {
   padding: 0.25rem;
